Header spacing fix - Safari

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,9 @@
   position: fixed;
   top: 0;
   right: 0;
-  left: 0;min-height: var(--header-height);
+  left: 0;
+  min-height: var(--header-height);
+  /* height: var(--header-height); */
   max-height: var(--header-height);
   z-index: 999;
   background-color: transparent;
@@ -27,10 +29,11 @@
   align-items: stretch;
   gap: var(--space-sm);
   flex-grow: 0;
-  height: calc(var(--header-height) - var(--space-md) * 2);
+  max-height: calc(var(--header-height) - var(--space-md) * 2);
+  flex: 0 0 calc(var(--header-height) - var(--space-md) * 2);
   z-index: 1;
   margin: var(--space-md) var(--space-md) 0;
-  /* margin-bottom: var(--space-sm); */
+  margin-bottom: var(--space-sm);
 }
 
 .menuButton {
@@ -169,7 +172,10 @@
 }
 
 .navigationMenu {
-  flex-grow: 0;
+  /* flex-grow: 0;
+  flex-basis: 0%; */
+  /* flex: 0 1 100%; */
+  /* max-height: 0; */
   z-index: 1;
   display: flex;
   flex-direction: row;
@@ -188,6 +194,9 @@
 .header.menuOpen .navigationMenu {
   opacity: 1;
   pointer-events: all;
+  /* max-height: calc(100dvh - var(--header-height)); */
+  /* flex-basis: 100%; */
+  /* flex-grow: 1; */
 }
 
 .navProjects {
